styles.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    /* scroll-behavior: smooth; */
}

/* creating font face  */

@font-face {
    font-family: 'futura';
    src: url('./fonts/futura/futura\ medium\ bt.ttf');
}

/* header css  */
/* Scroll Progress Bar*/
#progress-container {
    position: fixed ;
    top: 1px;
    left: 0;
    width: 100%;
    height: 15px;
    z-index: 99990;
    /* background: #f3f3f3; */
  }
  
  #progress-bar {
    position: fixed;
    top: 0.3px;
    left: 0;
    width: 0%;
    height: 6px;
    width: 0;
    background: linear-gradient(90deg, rgba(27, 27, 27, 0.762) 0%, rgb(61, 61, 61) 50%, rgba(38, 38, 38, 0.679) 100%);
    box-shadow: 0 0 4px rgba(255, 244, 221, 0.7), 0 0 10px rgba(255, 255, 255, 0.496);
    transition: width 0.09s ease-in-out;
    /* border-radius: 10px; */
  }
  
.header {
    height: 70px;
    width: 100%;
    /* background-color: red; */
    padding: 0px 2%;
    display: flex;
    justify-content: space-between;

}

.logo {
    width: 12%;
    height: 70px;
    /* background-color: yellow; */
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'futura';
    font-weight: bold;
    font-size: 25px;
}
.logo img{
    height: 65px;
    width: 80px;
}

.border {
    font-size: 0.85rem;
}

.border:hover {
    text-decoration: underline;
    font-weight: 500;
}

.navigation {
    width: 30%;
    height: 70px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 15px;
    /* background-color: blue; */
}

.nav-links {
    width: 150%;
    height: 70px;
    /* background-color: yellow; */
    display: flex;
    list-style-type: none;
    align-items: center;
    justify-content: space-evenly;
    white-space: nowrap;
    font-family: 'futura';
    font-size: 17px;
    color: #1d1d1d;
}

.nav-links>.nav-link {
    width: 150px;
    display: flex;
    justify-content: center;
}

.nav-links>.nav-link>a {
    color: #1d1d1d;
    text-decoration: none;
    font-size: 20px;
    font-weight: 500;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 85px;
}

.nav-links>.nav-link>i {
    font-size: 20px;
}



.utils {
    width: 8%;
    height: 70px;
    margin-right: 45px;
    /* background-color: purple; */
}

main {
    padding: 20px;
}

h2 {
    text-align: center;
    margin-bottom: 20px;
}

.feature {
    background: #ffffff;
    border: 1px solid #dddddd;
    margin: 10px 0;
    padding: 15px;
    border-radius: 5px;
}

.feature h3 {
    margin-bottom: 10px;
    
}


/* to make hover effect */

  /* Target all div elements with the feature class */
  .feature {
    transition: background-color 0.3s ease, transform 0.3s ease;
  }

  /* Define the hover effect for the feature div */
  .feature:hover {
    background-color: #f0f0f0; /* Change background color on hover */
    transform: scale(1.01); /* Slightly increase the size */
  }

  /* aroow code */

  .feature h3 {
    position: relative;
    padding-right: 20px; /* Adds space for the arrow */
    cursor: pointer;
  }

  /* Add the arrow using the pseudo-element */
  .feature h3::after {
    content: "\276F"; /* Unicode character for downwards arrow */
    position: absolute;
    right: 0;
    font-size: 20px;
    transition: transform 0.3s ease;
    transform: rotate(90deg);
  }

  /* Rotate the arrow on hover */
  .feature h3:hover::after {
    transform: rotate(180deg); /* Rotates the arrow */
  }





.footer {
    width: 100%;
    padding: 30px 20%;
    gap: 100px;
    background-color: #f6f5fa;
    font-family: 'futura';
    display: flex;
    justify-content: space-between;
    color: #1d1d1d;

}

.footer-section {
    /* background-color: red; */
    width: 32%;
    display: flex;
    flex-direction: column;
    row-gap: 10px;
    

}


.footer-list {
    list-style-type: none;
    display: flex;
    flex-direction: column;
    row-gap: 8px;
}

.footer-list li a {
    color: black;
    text-decoration: none;

}

.border-list {
    margin-top: 20px;
    border-top: 1px solid lightgray;
    width: 70%;
}

.socials {

    margin-top: 20px;
    display: flex;
    font-size: 20px;
    column-gap: 30px;

}

.socials a {
    transition: all .38s ease;
    color: black;
}

.socials a:hover {
    color: white;
    transform: scale(1.2);
    padding: 2px 4px;
    border-radius: 4px;
}

#github:hover {
    background-color: #3a383c;
}

#linkedin:hover {
    background-color: #0a66c2;
}

#instagram:hover {
    background-color: #e1306c;
}

#twitter:hover {
    background-color: #14171A;
}

.sub {
    margin-top: 2px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.sub input {
    height: 40px;
    width: 100%;
    max-width: 300px;
    border-radius: 30px;
    border: 1px solid lightgray;
    padding: 0 15px;
    margin-bottom: 10px;
}

.sub .btn {
    width: auto;
    padding: 10px 20px;
    font-size: 14px;
}

.sub .btn:hover {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    /* Adds a subtle shadow */
    transition: all 0.3s ease;
    /* Smooth transition for the hover effect */
    background-color: white;
    color: black;
    border: 1px solid black;
    cursor: pointer;
}


input {
    height: 40px;
    width: 60%;
    border-radius: 30px;
    border: 1px solid lightgray;
}

.menu {
    display: none;
}


@media (max-width:560px) {
    .header {

        height: 50px;
        /* background-color: red; */
        flex-direction: column;
        display: block;
        overflow-y: hidden;
        transition: .3s;
        position: fixed;
        z-index: 150;
        top: 0;
        background-color: white;
        /* align-items: flex-start; */

    }

    .logo {
        height: 50px;
        width: 100%;
        justify-content: space-between;
        align-items: center;
        /* background-color: yellow; */
    }





    .menu {
        display: block;
    }

    .navigation {
        width: 100%;
        height: auto;
        margin-top: 20px;
    }

    .utils {
        width: 70%;
    }

    .navigation>.nav-links {
        flex-direction: column;
        align-items: center;
        row-gap: 5px;
        height: auto;
    }

    .nav-links>.nav-link {
        padding: 3px;
    }

    .nav-links>.nav-link:hover {
        background: rgb(215, 214, 214);
        padding: 3px;
        border-radius: 10px;
    }

    .nav-link:hover {
        cursor: pointer;
    }

    .utils {
        width: 100%;
        justify-content: space-evenly;
    }

    .banner {
        height: 250px;
        margin-top: 50px;
    }

    .slide {
        background-size: cover;
        padding-left: 5%;
    }

    .slide-details {
        width: 80%;
    }

    .slide-details>h1 {
        font-size: 22px;
    }

    .btn {
        font-size: 10px;
    }

    .featured {
        flex-direction: column;
        row-gap: 5px;
    }

    .featured-box-1 {
        width: 100%;
        height: 250px;
    }

    .featured-box-1 img,
    .featured-box-3 img {
        margin-top: -100px;
    }

    .featured-box-2 {
        width: 100%;
        height: 300px;
        row-gap: 5px;
    }

    .featured-box-2-box-1,
    .featured-box-2-box-2,
    .featured-box-2-box-3 {
        height: 147.5px;
    }

    .featured-box-3 {
        width: 100%;
        height: 250px;
    }

    .products {
        padding: 30px 5%;
        align-items: flex-start;
        overflow-x: scroll;
    }

    .products-list {
        width: 290%;
    }

    .categories {
        padding: 30px 5%;
        flex-direction: column;
    }

    .category {
        width: 100%;
    }

    .insta {
        padding: 30px 5%;
    }

    .posts {
        /* flex-direction: column; */
        flex-wrap: wrap;
        row-gap: 10px;
    }

    .post-image {
        width: 49%;

    }

    .footer {
        padding: 30px 5%;
        flex-direction: column;
        row-gap: 20px;
    }

    .footer-section {
        width: 100%;

    }

    .sub input {
        max-width: 100%;
    }

}

